--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "webpack": "^5.99.9",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.1"
+    },
+    "dependencies": {
+        "nanoid": "^5.1.5"
     }
 }
